<resources>
    <string name="app_name">Lazyfier</string>
    <string name="pc_shutdown_name">LazyShutDown</string>
    <string name="btn_shutdown">Shut down the computer</string>
    <string name="btn_close">Close current window</string>
    <string name="btn_play_pause">Play/Pause</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_fullscreen">Full screen</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="btn_rewind">Rewind</string>
    <string name="btn_fast_forward">Fast forward</string>
    <string name="btn_vol_up">Volume up</string>
    <string name="btn_vol_down">Volume down</string>
    <string name="btn_msg">Send popup message</string>
    <string name="btn_mouse">Control mouse</string>
    <string name="btn_about">Show the about dialog</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_change_btn_layout">Change button layout</string>
    <string name="btn_rescan">Scan servers again</string>
    <string name="btn_preview">Preview chosen button background</string>

    <string name="label_detected_servers">List of detected servers:</string>
    <string name="label_no_detected_servers">No Lazyfier servers detected</string>
    <string name="label_btn_background_change">Button background:\n(tap to change)</string>
    <string name="label_btn_layout_change">button layout:\n(tap to change)</string>

    <string name="btn_left_click">Mouse left click</string>
    <string name="btn_right_click">Mouse right click</string>
    <string name="text_scroll_text">S\nc\nr\no\nl\nl</string>

</resources>
