<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radinaradionica.lazyfier.Lazyfier"
    android:background="#070809">

    <ImageButton
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:id="@+id/imageButton_shutdown"
        android:background="@mipmap/bgnd1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/shutdown"
        android:contentDescription="@string/btn_shutdown" />

    <ImageButton
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:id="@+id/imageButton_stop"
        android:background="@mipmap/bgnd1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/stop"
        android:contentDescription="@string/btn_stop" />

    <ImageButton
        android:layout_width="140dp"
        android:layout_height="68dp"
        android:id="@+id/button_msg"
        android:src="@mipmap/msg"
        android:background="@mipmap/bgnd2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/btn_msg" />

    <GridLayout
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/background_2"
        android:columnCount="3"
        android:rowCount="3"
        android:id="@+id/buttonGrid">

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:id="@+id/imageButton_vol_up"
            android:background="@android:color/transparent"
            android:src="@mipmap/vol_up"
            android:layout_row="0"
            android:layout_column="1"
            android:contentDescription="@string/btn_vol_up" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="120dp"
            android:id="@+id/imageButton_prev"
            android:background="@android:color/transparent"
            android:src="@mipmap/previous"
            android:layout_row="1"
            android:layout_column="0"
            android:contentDescription="@string/btn_previous" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="120dp"
            android:id="@+id/imageButton_next"
            android:background="@android:color/transparent"
            android:src="@mipmap/next"
            android:layout_column="2"
            android:layout_row="1"
            android:contentDescription="@string/btn_next" />

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:id="@+id/imageButton_vol_down"
            android:background="@android:color/transparent"
            android:src="@mipmap/vol_down"
            android:layout_row="2"
            android:layout_column="1"
            android:contentDescription="@string/btn_vol_down" />

        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="1"
            android:layout_column="1"
            android:id="@+id/playBtnFrame">


            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageButton_play"
                android:background="@android:color/transparent"
                android:src="@mipmap/play_pause"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:contentDescription="@string/btn_play_pause" />
        </FrameLayout>
    </GridLayout>

    <ImageButton
        android:layout_width="140dp"
        android:layout_height="68dp"
        android:id="@+id/button_cursor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/mouse"
        android:background="@mipmap/bgnd2"
        android:contentDescription="@string/btn_mouse" />

</RelativeLayout>
