<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radinaradionica.lazyfier.Lazyfier"
    android:id="@+id/MainView">

    <ImageButton
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:id="@+id/imageButton_vol_up"
        android:background="@mipmap/bgnd1"
        android:src="@mipmap/vol_up"
        android:layout_below="@+id/imageButton_stop"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/btn_vol_up" />

    <ImageButton
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:id="@+id/imageButton_play"
        android:background="@mipmap/bgnd1"
        android:src="@mipmap/play_pause"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/btn_play_pause" />

    <ImageButton
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:id="@+id/imageButton_prev"
        android:background="@mipmap/bgnd1"
        android:src="@mipmap/previous"
        android:layout_alignTop="@+id/imageButton_play"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/btn_previous" />

    <ImageButton
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:id="@+id/imageButton_next"
        android:background="@mipmap/bgnd1"
        android:src="@mipmap/next"
        android:layout_alignTop="@+id/imageButton_play"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/btn_next" />

    <ImageButton
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:id="@+id/imageButton_vol_down"
        android:background="@mipmap/bgnd1"
        android:src="@mipmap/vol_down"
        android:layout_above="@+id/button_msg"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/btn_vol_down" />

    <ImageButton
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:id="@+id/imageButton_stop"
        android:background="@mipmap/bgnd1"
        android:src="@mipmap/stop"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/btn_stop" />

    <ImageButton
        android:layout_width="140dp"
        android:layout_height="68dp"
        android:id="@+id/button_msg"
        android:src="@mipmap/msg"
        android:background="@mipmap/bgnd2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/btn_msg" />

    <ImageButton
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:id="@+id/imageButton_shutdown"
        android:background="@mipmap/bgnd1"
        android:src="@mipmap/shutdown"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/btn_shutdown" />

    <ImageButton
        android:layout_width="140dp"
        android:layout_height="68dp"
        android:id="@+id/button_cursor"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageButton_next"
        android:layout_alignEnd="@+id/imageButton_next"
        android:src="@mipmap/mouse"
        android:background="@mipmap/bgnd2"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:contentDescription="@string/btn_mouse" />

    <!-- the following are dummy constructs as they exist in the other layout.
         If they are not included a NULL object reference is triggered when switching skins.
         So far neither "try-catch" blocks nor "if(null.." blocks did not help remove these.
    -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageButton_shutdown"
        android:layout_toEndOf="@+id/imageButton_shutdown"
        android:visibility="gone"
        android:id="@+id/buttonGrid"></GridLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageButton_shutdown"
        android:layout_toEndOf="@+id/imageButton_shutdown"
        android:visibility="gone"
        android:id="@+id/playBtnFrame"></FrameLayout>


</RelativeLayout>


