<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Cursor"
    android:orientation="horizontal">

    <Button
        android:layout_width="0dp"
        android:layout_weight="0.4"
        android:layout_height="fill_parent"
        android:text="@string/btn_left_click"
        android:id="@+id/button_left"
        android:background="#1a1515"
        android:textColor="#e9dddd"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/btn_left_click" />

    <Button
        android:layout_width="0dp"
        android:layout_weight="0.4"
        android:layout_height="fill_parent"
        android:text="@string/btn_right_click"
        android:id="@+id/button_right"
        android:background="#1a1515"
        android:textColor="#e9dddd"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/btn_right_click" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:text="@string/text_scroll_text"
        android:id="@+id/textView"
        android:layout_weight="0.17"
        android:enabled="false"
        android:gravity="center"
        android:textColor="#221e1e" />

</LinearLayout>
